Answer with the ids Rebol names, and only those
The error catalogue goal: 81 of Rebol's 142 ids could be raised, and now 114
can. Every one of the 28 left has a written reason, and 24 of those are ids a
real 3.22.5 cannot raise either -- eleven appear in gen-errnums.h and in no .c
file, three sit in code the build disables, six belong to extensions, two are
compiled out or unexported, and halt and quit go through Halt_Code rather than
Trap.

New arms, each read off ./r3-head first and each with a test that builds an
interpreter and reads no .r3 file:

  parse-series, parse-variable, parse-command  a get-word holding no series,
      and a SET or COPY target that is not a variable or is a reserved word
  no-return       a loop whose test answers nothing, rather than looping
  self-protected  SET, UNSET, an object spec, and APPEND or INSERT of a field
      named self -- but only where the object has a self slot to overwrite,
      which a USE context has not
  bad-char        to word! of a character that spells no word alone
  stack-overflow  replacing too-deep and nesting-too-deep, neither of which
      Rebol's catalogue has a name for
  bad-file-mode, no-rename, invalid-port, process-not-found
  bad-series      check on a text or binary carrying a zero
  no-memory       a count past the C's own cap, and an allocation the host
      cannot serve, which used to leave as a java.lang.OutOfMemoryError
  bad-sys-func    one of the four functions the interpreter calls by name
      replaced with something that is not a function

Five ids JEBOL had invented are gone: too-deep, nesting-too-deep,
unterminated-string, invalid-escape and integer-out-of-range. R3 answers
stack-overflow for the first two and invalid for the rest. The REPL asked for
another line by matching the id text, so it now asks the reader which failure
it was instead.

error-parity.py grew two halves it was missing: the ids JEBOL raises that
Rebol does not name, and whether any id is filed under a categor